apps/Transmission/00-transmission-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tranmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tranmission
  template:
    metadata:
      labels:
        app: tranmission
    spec:
      containers:
      - name: tranmission
        image: linuxserver/transmission:amd64-latest
        ports:
          - containerPort: 9091 
          - containerPort: 51413
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: downloads
          persistentVolumeClaim:
            claimName: transmission-downloads
